# mainframe-conversion-claude

./: .gitignore  MAINFRAME_ANALYSIS_REPORT.md  README.md  sonar-project.properties  sonar_issues.json
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_authorization_tables.py  001_create_cards_module_tables.py  001_create_users_table.py  001_initial_schema.py  001_initial_schema_users_table.py  002_accounts_customers_schema.py  002_create_transaction_types_table.py  003_create_accounts_customers_cards_tables.py  004_create_transactions_report_requests_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/exceptions/: __init__.py  errors.py  handlers.py
backend/app/middleware/: security_headers.py
backend/app/models/: __init__.py  account.py  account_customer_xref.py  authorization.py  card_xref.py  credit_card.py  customer.py  report_request.py  transaction.py  transaction_type.py  user.py
backend/app/repositories/: __init__.py  account_repository.py  authorization_repository.py  billing_repository.py  card_xref_repository.py  credit_card_repository.py  customer_repository.py  report_repository.py  transaction_repository.py  transaction_type_repository.py  user_repository.py
backend/app/schemas/: __init__.py  account.py  auth.py  authorization.py  billing.py  common.py  credit_card.py  report.py  transaction.py  transaction_type.py  user.py
backend/app/services/: __init__.py  account_service.py  auth_service.py  authorization_service.py  billing_service.py  credit_card_service.py  report_service.py  transaction_service.py  transaction_type_service.py  user_service.py
backend/app/utils/: __init__.py  dependencies.py  rate_limit.py  security.py
backend/sql/: create_table.sql  create_tables.sql  seed_data.sql
backend/tests/: __init__.py  conftest.py  test_accounts_endpoints.py  test_auth_endpoints.py  test_auth_service.py  test_config.py  test_exception_handlers.py  test_exceptions.py  test_middleware_and_health.py  test_models_and_database.py  test_schemas.py  test_security_utils.py
backend/tests/test_api/: conftest.py  test_account_endpoints.py  test_auth_endpoints.py  test_authorization_endpoints.py  test_credit_card_endpoints.py  test_transaction_endpoints.py  test_transaction_type_endpoints.py  test_user_endpoints.py
backend/tests/test_models/: test_user_model.py
backend/tests/test_repositories/: test_repositories.py  test_user_repository.py
backend/tests/test_services/: test_account_service.py  test_auth_service.py  test_authorization_service.py  test_billing_service.py  test_credit_card_service.py  test_report_service.py  test_transaction_service.py  test_transaction_type_service.py  test_user_service.py
carddemo_fastapi/: .env.example  .gitignore  README.md  pyproject.toml
carddemo_fastapi/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
carddemo_fastapi/app/middleware/: auth_middleware.py
carddemo_fastapi/app/models/: __init__.py  account.py  auth_fraud.py  card.py  card_xref.py  customer.py  disclosure_group.py  pending_auth_detail.py  pending_auth_summary.py  tran_cat_balance.py  transaction.py  transaction_category.py  transaction_type.py  user.py
carddemo_fastapi/app/routers/: accounts.py  auth.py  authorizations.py  bill_payment.py  cards.py  reports.py  transaction_types.py  transactions.py  users.py
carddemo_fastapi/app/schemas/: account.py  auth.py  authorization.py  bill_payment.py  card.py  common.py  report.py  transaction.py  transaction_type.py  user.py
carddemo_fastapi/app/services/: account_service.py  auth_service.py  authorization_service.py  bill_payment_service.py  card_service.py  report_service.py  transaction_service.py  transaction_type_service.py  user_service.py  validation.py
carddemo_fastapi/sql/: 001_create_tables.sql  002_create_indexes.sql  003_seed_data.sql
carddemo_fastapi/tests/: conftest.py  test_accounts.py  test_auth.py  test_authorizations.py  test_bill_payment.py  test_cards.py  test_reports.py  test_transaction_types.py  test_transactions.py  test_users.py  test_validation.py
fast_api/: .coverage  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
fast_api/alembic/: env.py
fast_api/alembic/versions/: 001_initial_schema.py
fast_api/app/: config.py  database.py  dependencies.py  main.py
fast_api/app/api/: dependencies.py
fast_api/app/core/: config.py  exceptions.py
fast_api/app/infrastructure/: database.py
fast_api/app/models/: account.py  authorization.py  card.py  customer.py  transaction.py  user.py
fast_api/app/repositories/: account_repo.py  authorization_repo.py  card_repo.py  transaction_repo.py  transaction_type_repo.py  user_repo.py
fast_api/app/schemas/: account.py  account_schemas.py  admin.py  auth.py  auth_schemas.py  authorization.py  authorization_schemas.py  card.py  card_schemas.py  report.py  tran_type_schemas.py  transaction.py  transaction_schemas.py  transaction_type.py  user.py  user_schemas.py
fast_api/app/services/: account_service.py  admin_service.py  auth_service.py  authorization_service.py  card_service.py  report_service.py  transaction_service.py  transaction_type_service.py  user_service.py
fast_api/app/utils/: cobol_compat.py  error_handlers.py
fast_api/migrations/: env.py
fast_api/migrations/sql/: 001_create_tables.sql  002_seed_data.sql
fast_api/sql/: create_tables.sql  seed_data.sql
fast_api/src/app/: __init__.py  config.py  database.py  main.py
fast_api/tests/: __init__.py  conftest.py
fast_api/tests/integration/: __init__.py  test_accounts_api.py  test_accounts_endpoint.py  test_admin_endpoint.py  test_auth_endpoint.py  test_auth_endpoints.py  test_authorizations_endpoint.py  test_batch_api.py  test_card_endpoints.py  (+12 more)
modern-app/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  seed_data.py
(+1131 files in other folders)
