[tool.poetry]
name = "user-administration-api"
version = "0.1.0"
description = "User Administration Module — converted from CardDemo COBOL programs COUSR00C/01C/02C/03C"
authors = ["CardDemo Migration Team"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.3"
alembic = "^1.13.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
anyio = {extras = ["trio"], version = "^4.3.0"}
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/app"]
omit = ["*/tests/*", "*/migrations/*"]
