[tool.poetry]
name = "carddemo-user-admin"
version = "1.0.0"
description = "CardDemo User Administration API — modernised from COUSR00C-03C COBOL"
authors = ["CardDemo Modernisation Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
sqlalchemy = { version = ">=2.0.0", extras = ["asyncio"] }
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"
bcrypt = ">=4.1.3"
pyjwt = ">=2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
httpx = ">=0.27.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
